--- a/src/style.css
+++ b/src/style.css
@@ -98,7 +98,7 @@ p {
 }
 
 .client-logo {
-  @apply opacity-60 duration-300;
+  @apply opacity-80 duration-300;
 }
 .client-logo:hover {
   @apply opacity-100;
